k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateful-app-service
  labels:
    app: stateful-app
    component: service
spec:
  type: NodePort
  selector:
    app: stateful-app
  ports:
  - name: http
    port: 80
    targetPort: 8000
    nodePort: 30007
    protocol: TCP
